@@ -1,3 +1,13 @@
+2016-09-01 Jana Mendrok  <jana.mendrok@chalmers.se>
+
+	* arts-2-3-529
+
+	* src/m_rt4.cc (RT4Init):
+	Loophole fix: RT4 has to be run with cloudbox_limits[0]==0.
+
+	* src/m_disort.cc (DisortInit):
+	Minor modifications.
+
 2016-09-05  Richard Larsson <ric.larsson@gmail.com>
 
 	* arts-2-3-528
